--- a/src/components/volume/styles/volume-slider.css
+++ b/src/components/volume/styles/volume-slider.css
@@ -2,7 +2,6 @@
 .volume-slide-container {
   width: 100%;
   position: relative;
-  margin-top: 2px;
 }
 
 .volume-slider {
